# nemd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
checkpoints_p25b_v3/: best_model.pt  config.json  final.pt  final_model.pt  history.json
experiments/applications/classification/: dataset.py  features.py  filter_banks.py  models.py  parametric_pou.py  run.py  snr_sweep.sh  sweep_magonly.py  sweep_nemd.py  sweep_parametric.py  sweep_passB.py  sweep_phaseC.py  sweep_phaseD.py  sweep_physics_ablation.py  train_pipelines.py
experiments/applications/cwru/: fetch_cwru.py  run_cwru_4class.py
experiments/applications/generalization/: compare.py  dataset.py
experiments/applications/nonstationary/: compare.py  dataset.py  train.py
experiments/applications/pupil/: classify_cognitive_load.py  compare_decompositions.py  run_2class_passB.py  synthetic_pupil.py  train_pupil_nemd.py
experiments/benchmarks/: crossing_chirps_figure.py  length_agnostic.py
experiments/synthetic/: compare_decompositions.py  compare_filter_bank.py  train_filter_bank.py
nemd/: __init__.py  classical.py  layers.py  losses.py  model.py  train.py  utils.py
notebooks/: 01_demo.ipynb
paper/: main.tex  references.bib
paper/figures/phase3_exp1/: summary.json
paper/figures/phase3_exp2/: summary.json
paper/figures/phase3_exp3/: summary.json
paper/figures/phase3_exp3_passB/: cwru_results.json  length_agnostic.json  magonly_results.json  (+6 more)
paper/nemd_tsp/: README.md  main.tex  make_figs.py  make_figs_passB.py  refs.bib
tests/: test_losses.py  test_model.py  test_utils.py
(+9 files in other folders)
