[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemd"
version = "0.1.0"
description = "Neural Empirical Mode Decomposition: a differentiable, physics-constrained signal decomposition method"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aous Abdo"},
]
keywords = ["signal-processing", "emd", "neural-network", "pytorch", "decomposition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "EMD-signal>=1.5",
    "vmdpy>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
include = ["nemd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
